--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ logging.level.org.springframework = debug
 graphql.servlet.mapping=/graphql
 graphql.servlet.enabled=true
 graphql.servlet.corsEnabled=true
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/golf_scores
+spring.datasource.username=golf_app
+spring.datasource.password=1234
+
+persist.external=y
