--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ graphql.servlet.corsEnabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/golf_scores
-spring.datasource.username=golf_app
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DBNAME:golf_scores}
+spring.datasource.username=${MYSQL_USER:golf_app}
+spring.datasource.password=${MYSQL_PASSWORD:1234}
 
 persist.external=y
