Added hateaos support and a number of new domain model functionality (HoleYardage, TeeSet, Golfer, etc.)

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
